timerbased z-index fix

--- a/timerbased/css/timerpopup.css
+++ b/timerbased/css/timerpopup.css
@@ -24,6 +24,7 @@ html {
     visibility: hidden;
 }
 .wbpb-mastercontainer.active {
+    z-index: 2147483647;
     visibility: visible;
 }
 .wbpb-container {
